# agent-paint-pixel-skills

./: .gitignore  Cargo.toml  LICENSE  README.md  skill.json
.agents/skills/agent-paint-pixel-skills/: AGENTS.md  SKILL.md
.agents/skills/agent-paint-pixel-skills/agents/: openai.yaml
.agents/skills/agent-paint-pixel-skills/references/: apx-json-v0.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
docs/: README.zh-CN.md  agentpaint-cli-skill-spec.md  examples.md  install.md  install.zh-CN.md  llm-pixel-art-format.md  pixel-art-style-research.md  project-completion-spec.md  skill-compatibility.md
examples/: alpine-lake-128x64.apx  cyberpunk-noodle-stall-48x32.apx  dithered-train-window-128x64.apx  ember-fox-mask-32.apx  horror-candle-32.apx  horror-candle-local.patch.json  isometric-rooftop-garden-64.apx  isometric-rooftop-layer-control.patch.json  landscape_128x64.apx  mossy-rune-chest-32.apx  nes-ember-sword-24x16.apx  one-bit-lighthouse-16.apx  red-slime-jump-16.apxa  red-slime-jump-32.apxa  sunset-cove-32.apx  topdown-ruins-96x64.apx
schemas/: apx-v0.schema.json
scripts/: install-skills.ps1  install-skills.sh  install.ps1  install.sh  sync-skill-mirror.ps1  sync-skill-mirror.sh
skills/agent-paint-pixel-skills/: AGENTS.md  SKILL.md
skills/agent-paint-pixel-skills/agents/: openai.yaml
skills/agent-paint-pixel-skills/references/: apx-json-v0.md  large-canvas.md  pixel-art-style-guide.md
src/: lib.rs  main.rs
tests/: export_psd_cli.rs  import_cli.rs  supersample_cli.rs
(+18 files in other folders)
